--- a/base/src/main/res/xml/network_security_config.xml
+++ b/base/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config xmlns:android="http://schemas.android.com/apk/res/android">
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">localhost</domain>
+        <domain includeSubdomains="true">www.dwaal.dds.nl</domain>
     </domain-config>
 </network-security-config>
