log details toegevoegd

--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -1,12 +1,40 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primaryDark</item>
+        <item name="colorAccent">@color/accent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+
+    <style name="LogonTheme" parent="AppTheme">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="MenuTheme" parent="AppTheme">
+        <item name="android:textSize">25sp</item>
+    </style>
+
+    <style name="MenuTabLayout" parent="Base.Widget.Design.TabLayout">
+        <item name="tabTextAppearance">@style/MenuTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/accent</item>
+        <item name="tabTextColor">@color/inverse</item>
+    </style>
+
+    <style name="MenuTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@color/inverse</item>
+        <item name="textAllCaps">true</item>
+
+
+    </style>
+
+    <style name="MenuDataTheme" parent="AppTheme">
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
