--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#07a</color>
-    <color name="colorPrimaryDark">#444</color>
-    <color name="colorAccent">#0cf</color>
-    <color name="colorBrightGreen">#0f0</color>
-    <color name="colorRowOdd">#c6f4ff</color>
-    <color name="colorRowEven">#f7fdff</color>
+    <color name="primary">#07a</color>
+    <color name="primaryDark">#444</color>
+    <color name="accent">#0cf</color>
+    <color name="brightGreen">#0f0</color>
+    <color name="brightRed">#f00</color>
+    <color name="inverse">#f4fdff</color>
+    <color name="inverseDark">#eaf0f2</color>
 </resources>
