--- a/logon/src/main/res/layout/activity_login.xml
+++ b/logon/src/main/res/layout/activity_login.xml
@@ -39,7 +39,6 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_marginTop="5dp"
-                android:background="@drawable/input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -56,7 +55,6 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_marginTop="5dp"
-                android:background="@drawable/input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -76,13 +74,12 @@
 
             <Button
                 android:id="@+id/email_sign_in_button"
-                android:background="@drawable/button"
+                android:background="@drawable/rounded_button_shape"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
-                android:textStyle="bold"
-                android:textColor="#fff"/>
+                android:textColor="@color/inverse"
+                android:text="@string/action_sign_in"/>
 
         </LinearLayout>
     </ScrollView>
