--- a/menu/src/main/res/drawable-v24/rounded_edit_shape.xml
+++ b/menu/src/main/res/drawable-v24/rounded_edit_shape.xml
@@ -2,15 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="3dp"
-        android:color="@color/colorPrimary" />
+        android:color="@color/accent" />
 
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/inverse" />
 
     <padding
-        android:left="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        android:top="1dp" />
+        android:left="5dp"
+        android:right="5dp"
+        android:bottom="10dp"
+        android:top="10dp" />
 
     <corners android:radius="10dp" />
 </shape>
