--- a/menu/src/main/res/layout/list_item_log.xml
+++ b/menu/src/main/res/layout/list_item_log.xml
@@ -5,10 +5,41 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:gravity="center_vertical">
-
-    <TextView
-        android:id="@+id/listItemLogTextView"
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Test"/>
+        android:stretchColumns="*">
+        <TableRow>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/logChecked"
+                    android:padding="5dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/no"
+                    />
+                <TextView
+                    android:id="@+id/logDatum"
+                    android:padding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    />
+                <TextView
+                    android:id="@+id/logStatus"
+                    android:padding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    />
+
+            </LinearLayout>
+        </TableRow>
+    </TableLayout>
+
+
 </FrameLayout>
