--- a/menu/src/main/res/layout/list_item_object.xml
+++ b/menu/src/main/res/layout/list_item_object.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="24dp"
+    android:layout_height="@dimen/list_item_height"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp">
     <TableLayout
@@ -11,20 +11,13 @@
         <TableRow>
             <TextView
                 android:id="@+id/objectOmschrijving"
-                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
-
+                android:layout_gravity="left|center_vertical"
                 />
             <TextView
                 android:id="@+id/objectMerkType"
-                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp"
+                android:layout_gravity="left|center_vertical"
                 />
         </TableRow>
     </TableLayout>
