--- a/menu/src/main/res/layout/menu_data.xml
+++ b/menu/src/main/res/layout/menu_data.xml
@@ -14,7 +14,7 @@
         android:visibility="gone" />
     <!-- first row of the table layout-->
     <TableRow
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/menuBedrijf"
@@ -34,7 +34,7 @@
             />
     </TableRow>
     <TableRow
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/menuMedewerker"
