camera code ready

--- a/menu/src/main/res/layout/picture_dialog.xml
+++ b/menu/src/main/res/layout/picture_dialog.xml
@@ -3,9 +3,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <nl.orsit.menu.zoom.ImageViewTouch
+    <nl.orsit.menu.util.zoom.ImageViewTouch
         android:id="@+id/pictureView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <Button
+        android:id="@+id/pictureButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/inverse"
+        android:background="@drawable/rounded_button_shape"
+        android:text="Sluiten"/>
 
 </LinearLayout>
